<resources>
    <string name="app_name">Store Apps</string>
    <string name="copyright">© Store App 2025 - Mufti Alie S</string>

    <!-- Input Hint-->
    <string name="input_hint_username">Input your Username</string>
    <string name="input_hint_password">Input your Password</string>

    <!-- Alert Input-->
    <string name="alert_invalid_username">Username can\'t Empty</string>
    <string name="alert_invalid_password">Password can\'t Empty</string>
    <string name="alert_empty_username">Username is required</string>
    <string name="alert_empty_password">Password is required</string>

    <!-- Message -->
    <string name="message_complete_register">Account successfully registered</string>
    <string name="message_complete_login">Account successfully logged in</string>
    <string name="message_to_register">Don\'t have an account?</string>

    <string name="alert_button_ok">OK</string>
    <string name="alert_button_yes">Yes</string>
    <string name="alert_button_no">No</string>
    <string name="alert_invalid_login">Incorrect Username or Password, Please try again</string>

    <string name="alert_title_logout">Confirmation</string>
    <string name="alert_message_logout">Are you sure you want to exit?</string>

    <string name="alert_title_add_cart">Add to Cart?</string>
    <string name="alert_message_add_cart">Are you sure you want to add this product to your shopping cart?</string>

    <string name="alert_title_product_not_found">Not Found</string>
    <string name="alert_message_product_not_found">Product Not Found</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="register">Register</string>
    <string name="error">Error</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="checkout">Checkout</string>
    <string name="total_price">Total</string>

    <string name="dummy_username">kevinryan</string>
    <string name="dummy_password">kev02937@</string>

    <string name="category_product">Category Product</string>
    <string name="category_1">Men\'s Clothing</string>
    <string name="category_2">Jewelery</string>
    <string name="category_3">Electronics</string>
    <string name="category_4">Women\'s Clothing</string>
    <string name="category_all">Show All</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="category">Category</string>
    <string name="description_product">Description Product</string>
    <string name="label_price">$ %.2f</string>
    <string name="label_rating">%s (%s)</string>
    <string name="label_checkout">%.2f x %s</string>

    <string name="total_payment">Total Payment</string>
    <string name="total_item">Total Item</string>

    <string name="add_to_cart">Add to Cart</string>
    <string name="update_to_cart">Update to Cart</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="updated_to_cart">Updated to cart</string>

</resources>